--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".ui.notifications.sexEditActivity"
             android:label="@string/title_activity_sex_edit"
@@ -36,17 +37,16 @@
             android:name=".Register"
             android:label="@string/title_activity_register"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/app_name">
-           <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-           </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-
+        <activity android:name=".data1Activity"></activity>
         <activity
             android:name=".ui.forum.ForumContentActivity"
             android:label="Forum">
@@ -56,14 +56,15 @@
             android:name=".ui.message.MessageContentActivity"
             android:label="Message">
         </activity>
+        <activity
+            android:name=".detailActivity"
+            android:label="@string/title_activity_detail"
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
         </activity>
-
-
-
     </application>
 
 </manifest>
