--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,7 @@
             android:name=".MainActivity"
             android:label="@string/app_name">
         </activity>
+        <activity android:name=".ui.dashboard.DashboardNewTaskReources"></activity>
     </application>
 
 </manifest>
