--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,12 +26,12 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-   /* implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'com.google.android.material:material:1.0.0'*/
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    /* implementation 'androidx.appcompat:appcompat:1.0.2'
+        implementation 'com.google.android.material:material:1.0.0'*/
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-   implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
-     implementation 'androidx.navigation:navigation-fragment:2.0.0'
+    implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
+    implementation 'androidx.navigation:navigation-fragment:2.0.0'
     implementation 'androidx.navigation:navigation-ui:2.0.0'
     /*implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'*/
     testImplementation 'junit:junit:4.12'
@@ -41,7 +41,6 @@ dependencies {
     implementation 'com.miguelcatalan:materialsearchview:1.4.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.annotation:annotation:1.1.0'
@@ -51,4 +50,5 @@ dependencies {
     implementation 'pub.devrel:easypermissions:1.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation files('src/main/libs/mysql-connector-java-5.1.45-bin.jar')
 }
