--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,10 @@
             android:label="@string/app_name">
         </activity>
 
-        <activity android:name=".ui.dashboard.DashboardNewTaskReources"></activity>
+        <activity
+            android:name=".ui.dashboard.DashboardNewTaskReources"
+            android:label="@string/new_TR">
+        </activity>
 
     </application>
 
