--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".data1Activity"></activity>
+        <activity
+            android:name=".data1Activity"
+            android:label="data1Activity">
+        </activity>
         <activity
             android:name=".ui.forum.ForumContentActivity"
             android:label="Forum">
