--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
             android:label="@string/title_activity_register"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
+            android:name=".ui.forum.ForumContentActivity"
+            android:label="论坛内容" />
+        <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
@@ -50,10 +53,7 @@
             android:name=".data1Activity"
             android:label="data1Activity">
         </activity>
-        <activity
-            android:name=".ui.forum.ForumContentActivity"
-            android:label="Forum">
-        </activity>
+
 
         <activity
             android:name=".ui.message.MessageContentActivity"
@@ -72,6 +72,15 @@
         <activity
             android:name=".ui.dashboard.DashboardNewTaskReources"
             android:label="@string/new_TR">
+        </activity>
+
+        <activity
+            android:name=".ui.forum.ForumFragment"
+            android:label="论坛">
+        </activity>
+        <activity
+            android:name=".ui.forum.ForumActivity"
+            android:label="论坛">
         </activity>
 
     </application>
