--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,7 +71,16 @@
             android:name=".MainActivity"
             android:label="@string/app_name">
         </activity>
-
+        <activity
+            android:name=".ui.notifications.identityEditActivity"
+            android:label="实名认证"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".ui.login.ForgetPwdActivity"
+            android:label="忘记密码"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
         <activity
             android:name=".ui.dashboard.DashboardNewTaskReources"
             android:label="@string/new_TR">
