--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,10 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.forum.ForumContentActivity"
-            android:label="论坛内容" />
+            android:label="论坛内容" />  
+       <activity
+            android:name=".ui.forum.ForumAddActivity"
+            android:label="添加论坛主题" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/app_name">
